--- a/index.html
+++ b/index.html
@@ -12,6 +12,79 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
-      <h1>Browser Template</h1>
+      <h1></h1>
+
+      <div class='log'>
+      <div id='message'></div>
+
+     <form id="sign-up">
+       <input type="email" name="credentials[email]" placeholder="email">
+       <input type="password" name="credentials[password]" placeholder="password">
+       <input type="password" name="credentials[password_confirmation]" placeholder="password confirmation">
+       <input type="submit" value="Sign Up"/>
+     </form>
+
+     <form id="sign-in">
+               <input name="credentials[email]" type="text" placeholder="email">
+               <input name="credentials[password]" type="password" placeholder=" password">
+               <input type="submit" value="Sign In"/>
+             </form>
+       <form id="change-password">
+             <input type="passwords" name="passwords[old]" placeholder="old password">
+             <input type="passwords" name="passwords[new]" placeholder="new password">
+             <input type="submit" value="change password"/>
+           </form>
+
+    <form>
+<button id="sign-out"> Sign Out </button>
+    </form>
+    <h1>Music Database</h1>
+        <main>
+          <section>
+            <h2>See My Library</h2>
+            <button id='music-index'>Music Library</button>
+            <hr>
+
+
+            <hr>
+            <h2>Delete this song</h2>
+            <form id="music-destroy">
+              <input name="music[id]" type="text" placeholder="Enter id here">
+              <button>Delete</button>
+            </form>
+            <div id="music-destroy-message"></div>
+            <hr>
+
+            <h2>Update this song</h2>
+            <form id="music-update">
+              <input name="music[id]" type="text" placeholder="Enter id here">
+              <input name="music[title]" type="text" placeholder="Enter album title">
+              <input name="music[artist]" type="text" placeholder="Enter album artist">
+              <input name="music[song]" type="text" placeholder="Enter song title">
+
+              <button>Update Song</button>
+            <div id="music-update-message"></div>
+          </form>
+
+            <hr>
+            <h2>Add to the list</h2>
+            <form id="music-create">
+              <input name="music[title]" type="text" placeholder="Enter album title">
+              <input name="music[artist]" type="text" placeholder="Enter album artist">
+              <input name="music[fav_song]" type="text" placeholder="Enter song title">
+              <button>Add New Song</button>
+            </form>
+            <div id="music-create-message"></div>
+            <hr>
+          </section>
+  <section>
+          <!-- We will show any error messages in this div -->
+          <div id="error-message"></div>
+          <!-- We will show our books in books-display after loading the books -->
+          <div id="music-display"></div>
+        </section>
+      </main>
+
+
     </body>
 </html>
