Added event listeners to update music selection

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                <input type="submit" value="Sign In"/>
              </form>
        <form id="change-password">
-             <input type="passwords" name="passwords[old]" placeholder="old password">
-             <input type="passwords" name="passwords[new]" placeholder="new password">
+             <input type="password" name="passwords[old]" placeholder="old password">
+             <input type="password" name="passwords[new]" placeholder="new password">
              <input type="submit" value="change password"/>
            </form>
 
@@ -60,7 +60,7 @@
               <input name="music[id]" type="text" placeholder="Enter id here">
               <input name="music[title]" type="text" placeholder="Enter album title">
               <input name="music[artist]" type="text" placeholder="Enter album artist">
-              <input name="music[song]" type="text" placeholder="Enter song title">
+              <input name="music[fav_song]" type="text" placeholder="Enter song title">
 
               <button>Update Song</button>
             <div id="music-update-message"></div>
