Added Playlist Feature

--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@ Log In/Out     </button>
   </div>
 </div>
 
-<div class id="ipod"></div>
+<iframe src="https://open.spotify.com/embed/playlist/5ttmL8Lxs08Ts41zJXL0IJ" width="50" height="50" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
 
 
 
 <header>
 
-<button type="button" class="btn btn-outline-primary" id='music-index'>   Start Playlist  </button>
+<button type="button" class="btn btn-outline-warning" id='music-index'>   Start Playlist  </button>
   <div id='message'></div>
   <div id='message'></div>
   <div id="error-message"></div>
@@ -128,8 +128,6 @@ Log In/Out     </button>
 
         </section>
       </main>
-
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/YDlZ14E5XX8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     </body>
 </html>
